chore: connect redis

--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,5 +1,6 @@
 server:
   port: 8082
+  mode: dev
 mysql:
   host: 127.0.0.1
   port: 3306
@@ -16,3 +17,8 @@ logger:
   maxBackups: 3
   maxAge: 28
   compress: true
+redis:
+  host: 127.0.0.1
+  port: 6379
+  password: ""
+  database: 0
